--- a/src/components/SportsLiveCardSelection/index.module.scss
+++ b/src/components/SportsLiveCardSelection/index.module.scss
@@ -405,6 +405,10 @@
 							flex: 1;
 							margin-left: 0;
 						}
+
+						&:nth-child(4) {
+							flex: 0.4;
+						}
 					}
 				}
 
@@ -412,8 +416,10 @@
 					display: flex;
 					flex-direction: column;
 					font-weight: 600;
-					margin: 6px 0 0 0;
+					margin: 3px auto;
 					max-height: 70px;
+					justify-content: center;
+					width: 100%;
 
 					&.overflow {
 						overflow: hidden scroll;
@@ -422,7 +428,6 @@
 					>div {
 						display: flex;
 						flex-direction: row;
-						justify-content: space-between;
 						color: $grey;
 
 						span {
@@ -435,6 +440,10 @@
 
 							&:first-child {
 								flex: 1;
+							}
+
+							&:nth-child(4) {
+								flex: 0.4;
 							}
 						}
 					}
@@ -521,6 +530,33 @@
 
 		&::-webkit-scrollbar {
 			width: 0;
+		}
+
+		.modal_body_header {
+			display: flex;
+			width: 87%;
+			justify-content: space-between;
+
+			.modal_header_left {
+				display: flex;
+				align-items: center;
+
+				p {
+					font-family: Poppins;
+					font-size: 16px;
+					font-weight: 600;
+					padding: 0;
+					margin: 0;
+				}
+
+				.modal_player_name {
+					background-color: $primaryLight5;
+					margin-left: 8px;
+					padding: 10px 18px;
+					color: $primary;
+					border-radius: 11px;
+				}
+			}
 		}
 
 		.modal_body_content {
