--- a/src/components/MyGameCenterCard/myGameCenterCard.module.scss
+++ b/src/components/MyGameCenterCard/myGameCenterCard.module.scss
@@ -1,6 +1,6 @@
 @import '../../scss/colors.scss';
 
-.__power_center_card {
+.__my_game_center_card {
     width: 280px;
     height: 380px;
     border-radius: 8px;
@@ -8,26 +8,26 @@
     display: flex;
     flex-direction: column;
 
-    .__power_center_card_powerdfs {
+    .__my_game_center_card_powerdfs {
         display: flex;
         justify-content: center;
         margin-top: 10px;
 
-        .__power_center_card_powerdfs_hr {
+        .__my_game_center_card_powerdfs_hr {
             width: 30px;
             height: 1px;
             border: solid 2px $grey2;
         }
 
-        .__power_center_card_powerdfs_hr_left {
+        .__my_game_center_card_powerdfs_hr_left {
             margin: 14px 13px 13px 0;
         }
 
-        .__power_center_card_powerdfs_hr_right {
+        .__my_game_center_card_powerdfs_hr_right {
             margin: 14px 0 13px 13px;
         }
 
-        .__power_center_card_powerdfs_title {
+        .__my_game_center_card_powerdfs_title {
             width: 150px;
             height: 28px;
             margin: 10 13px 20px;
@@ -41,16 +41,16 @@
             text-align: center;
             color: $primary;
 
-            .__power_center_card_powerdfs_title_first {
+            .__my_game_center_card_powerdfs_title_first {
                 color: $grey2;
             }
         }
     }
 
-    .__power_center_card_prize_pool {
+    .__my_game_center_card_prize_pool {
             margin: 0 auto;
 
-        .__power_center_card_prize_pool_common {
+        .__my_game_center_card_prize_pool_common {
             width: 100%;
             height: 40px;
             font-family: Poppins;
@@ -64,17 +64,17 @@
             color: $grey2;
         }
 
-        .__power_center_card_prize_pool_price {
+        .__my_game_center_card_prize_pool_price {
             font-size: 34px;
             margin-bottom: 5px;
         }
 
-        .__power_center_card_prize_pool_text {
+        .__my_game_center_card_prize_pool_text {
             opacity: 0.6;
         }
     }
 
-    .__power_center_card_enter {
+    .__my_game_center_card_buttons {
         display: flex;
         flex: 1;
         flex-direction: column;
@@ -82,10 +82,9 @@
         align-items: center;
     }
 
-    .__power_center_card_date_time {
+    .__my_game_center_card_date_time {
         width: 100%;
         height: 17px;
-        margin-top: 10px;
         margin-bottom: 10px;
         text-shadow: 0 2px 4px $black5;
         font-family: Poppins;
@@ -99,7 +98,7 @@
         color: $grey11;
     }
 
-    .__power_center_card_total {
+    .__my_game_center_card_total {
         p {
             width: 100%;
             height: 25px;
@@ -121,19 +120,20 @@
         }
     }
 
-    .__power_center_card_status_and_details {
+    .__my_game_center_card_status_and_details {
         display: flex;
         flex-direction: row;
         align-items: center;
         height: 50px;
+        margin-top: 20px;
 
-        .__power_center_card_details {
+        .__my_game_center_card_details {
             display: flex;
             flex-direction: row;
             flex: 1;
             margin-right: 20px;
 
-            .__power_center_card_details_link {
+            .__my_game_center_card_details_link {
                 width: 100%;
                 height: 17px;
                 margin: 0 5px 0 0;
@@ -150,7 +150,7 @@
                 cursor: pointer;
             }
 
-            .__power_center_card_details_link_forward_arrow {
+            .__my_game_center_card_details_link_forward_arrow {
                 width: 4px;
                 height: 6px;
                 color: $primary;
