--- a/src/pages/PowerCenter/table.scss
+++ b/src/pages/PowerCenter/table.scss
@@ -18,6 +18,7 @@
                     display: none;
                 }
             }
+            cursor: pointer;
         }
     }
     .__power-center-scrollbar{
