--- a/src/components/SportsLiveCardSelection/index.module.scss
+++ b/src/components/SportsLiveCardSelection/index.module.scss
@@ -205,12 +205,27 @@
 	
 				.states_points_right {
 					margin: 0 10px 0 0;
+
+					.states_xp_times {
+						font-family: Poppins;
+						font-size: 12px;
+						font-weight: bold;
+						color: $grey;
+						display: flex;
+						justify-content: space-between;
+						align-items: center;
+
+						span {
+							color: $lightBlue;
+							font-size: 12px;
+						}
+					}
 					
 					.points_right_1 {
 						@extend .state_points_bg;
 
 						display: flex;
-						width: 75px;
+						width: 95px;
 						height: 45px;
 						flex-direction: row;
 						justify-content: space-evenly;
@@ -222,7 +237,9 @@
 							font-size: 16px;
 							font-weight: 600;
 							text-align: center;
-							width: 100%;
+							width: 90%;
+							text-align: left;
+							margin-left: 7px;
 						}
 
 						.state_xp {
@@ -495,7 +512,7 @@
 
 .modal_container {
 	display: flex;
-	width: 75%;
+	width: 71%;
 
 	.modal_header {
 		display: flex;
@@ -562,8 +579,9 @@
 		.modal_body_content {
 			display: flex;
 			flex-wrap: wrap;
-			justify-content: space-evenly;
-			align-items: center;
+			justify-content: space-between;
+			align-items: flex-start !important;
+			padding: 0 35px;
 		}
 	}
 }
