--- a/src/components/HomePageContentHeader/index.module.scss
+++ b/src/components/HomePageContentHeader/index.module.scss
@@ -112,6 +112,9 @@
       letter-spacing: normal;
       color: #f2f2f2;
       outline: none;
+      cursor: pointer;
+      text-align: center;
+      padding-top: 4px;
     }
   }
 }
@@ -209,6 +212,8 @@
         letter-spacing: normal;
         color: #f2f2f2;
         outline: none;
+        text-align: center;
+        padding-top: 4px;
       }
     }
   }
@@ -323,6 +328,8 @@
         letter-spacing: normal;
         color: #f2f2f2;
         outline: none;
+        text-align: center;
+        padding-top: 4px;
       }
     }
   }
@@ -441,6 +448,8 @@
         letter-spacing: normal;
         color: #f2f2f2;
         outline: none;
+        text-align: center;
+        padding-top: 4px;
       }
     }
   }
@@ -568,6 +577,8 @@
         letter-spacing: normal;
         color: #f2f2f2;
         outline: none;
+        text-align: center;
+        padding-top: 4px;
       }
     }
   }
@@ -683,6 +694,8 @@
         letter-spacing: normal;
         color: #f2f2f2;
         outline: none;
+        text-align: center;
+        padding-top: 4px;
       }
     }
   }
