--- a/src/scss/colors.scss
+++ b/src/scss/colors.scss
@@ -57,6 +57,8 @@ $danger5: #e63f2f;
 $success: #1bbc86;
 $successLight: #2b69304d;
 $successLight2: #2b69301a;
+$successLight3: #214f2480;
+$successLight4: #214f24;
 $green: #4bb654;
 $yellow: #fbbc15;
 $orangeRed: #f44336;
