Live standings page UI

--- a/src/scss/colors.scss
+++ b/src/scss/colors.scss
@@ -8,6 +8,7 @@ $primaryLight5: #fb6e004d;
 $primaryLight6: #fb6e001a;
 $primaryLight7: #c7570033;
 $primaryLight8: #fb6d0025;
+$primaryLight9: #291200;
 $black: #111111;
 $darkblack: #000;
 $lightBlack: #202124;
