--- a/src/components/PowerCenterCardDetails/footer.module.scss
+++ b/src/components/PowerCenterCardDetails/footer.module.scss
@@ -5,6 +5,7 @@
     flex-direction: row;
     position: absolute;
     bottom: 10px;
+    width: 100%;
 
     .__power_center_card_details_footer_back {
         display: flex;
@@ -12,9 +13,10 @@
         margin-left: 20px;
         margin-top: 7px;
         margin-right: 15px;
+        flex: 1;
+        justify-content: flex-start;
 
         .__power_center_card_details_footer_back_text {
-            width: 100%;
             height: 17px;
             margin: 0 0 0 5px;
             font-family: Poppins;
@@ -67,9 +69,10 @@
         margin-right: 20px;
         margin-top: 7px;
         margin-left: 15px;
+        flex: 1;
+        justify-content: flex-end;
 
         .__power_center_card_details_footer_next_text {
-            width: 100%;
             height: 17px;
             margin: 0 5px 0 0;
             font-family: Poppins;
