--- a/src/components/BalanceInfoComponent/index.module.scss
+++ b/src/components/BalanceInfoComponent/index.module.scss
@@ -98,7 +98,7 @@ p {
 .modal_container {
   background-color: $white;
   border-radius: 6px;
-  width: 1073px;
+  width: 100%;
   overflow: hidden scroll;
   max-height: 100vh - 10vh;
   margin-top: 15px;
