--- a/src/components/Modal/index.module.scss
+++ b/src/components/Modal/index.module.scss
@@ -11,4 +11,38 @@
   justify-content: center;
   align-items: center;
   z-index: 1000;
+
+  .modal {
+    display: flex;
+    flex-direction: column;
+    width: 70%;
+    background-color: $lightBlack;
+    border-radius: 16px;
+  }
+
+  .header {
+    display: flex;
+    flex: 1;
+    position: relative;
+
+    p {
+      font-size: 25px;
+      margin: 0;
+      padding: 20px;
+    }
+
+    .close_icon {
+      display: flex;
+      margin: 0;
+      padding: 10px;
+      position: absolute;
+      right: 20px;
+      top: 20px;
+      align-self: flex-end;
+
+      &:hover {
+        cursor: pointer;
+      }
+    }
+  }
 }
