--- a/src/scss/colors.scss
+++ b/src/scss/colors.scss
@@ -28,7 +28,7 @@ $lightGrey1: #d8d8d8;
 $lightGrey2: #c7cad1;
 $lightGrey3: #f7f7f7;
 $lightGrey4: #a7a7a7;
-$lightGrey5: #ffffff0d;;
+$lightGrey5: #ffffff0d;
 $black2: #17181a;
 $black3: #111111cc;
 $black4: #11111199;
@@ -68,4 +68,5 @@ $lightBlue: #688fbd;
 $lightBlue2: #8cc2ff;
 $lightBlue3: #6890bd7c;
 $lightBlue4: #6890bde5;
+$lightBlue5: #6890bd3f;
 $divider: #efefef;
