--- a/src/components/Modal/index.module.scss
+++ b/src/components/Modal/index.module.scss
@@ -6,11 +6,20 @@
   left: 0;
   right: 0;
   bottom: 0;
-  background-color: rgba(0, 0, 0, 0.4);
   display: flex;
   justify-content: center;
   align-items: center;
-  z-index: 1000;
+  z-index: 998;
+
+  .back_drop {
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color: rgba(0, 0, 0, 0.4);
+    z-index: 999;
+  }
 
   .modal {
     display: flex;
@@ -18,6 +27,8 @@
     width: 70%;
     background-color: $lightBlack;
     border-radius: 16px;
+    z-index: 1000;
+    max-height: 80vh;
   }
 
   .header {
