NHL Swap player updates

--- a/src/components/Modal/index.module.scss
+++ b/src/components/Modal/index.module.scss
@@ -28,8 +28,8 @@
     background-color: $lightBlack;
     border-radius: 16px;
     z-index: 1000;
-    max-height: 80vh;
-    padding: 0 25px;
+    max-height: 90vh;
+    // padding: 0 25px;
   }
 
   .header {
