--- a/src/components/LiveStandings/index.module.scss
+++ b/src/components/LiveStandings/index.module.scss
@@ -51,7 +51,7 @@
     .body_table {
       display: flex;
       flex-direction: column;
-      height: 45vh;
+      height: 60vh;
       overflow: hidden scroll;
 
       &::-webkit-scrollbar {
@@ -74,7 +74,7 @@
         width: 99%;
         justify-content: space-around;
         background-color: $lightBlack5;
-        padding: 20px 0;
+        padding: 13px 0;
         border-radius: 8px;
 
         span {
@@ -127,7 +127,8 @@
               border: none;
               outline: none;
               min-width: 143px;
-              height: 43px;
+              // height: 30px;
+              padding: 5px;
               border-radius: 8px;
               color: $black;
               font-size: 14px !important;
