--- a/src/components/Modal/index.module.scss
+++ b/src/components/Modal/index.module.scss
@@ -24,7 +24,7 @@
   .modal {
     display: flex;
     flex-direction: column;
-    width: 70%;
+    min-width: 65%;
     background-color: $lightBlack;
     border-radius: 16px;
     z-index: 1000;
