--- a/src/components/SportsLiveCardSelection/index.module.scss
+++ b/src/components/SportsLiveCardSelection/index.module.scss
@@ -185,16 +185,16 @@
         padding: 0;
         margin: 0;
         align-items: center;
-        justify-content: flex-start;
+        justify-content: space-between;
         color: $grey2;
 
         .team_d {
           display: flex;
           flex-direction: column;
-          flex: 1;
           height: 100%;
           align-self: flex-end;
           justify-content: flex-end;
+          transform: translateX(-6px);
 
           svg {
             margin: 3px 0;
