--- a/src/components/SportsLiveCardSelection/index.module.scss
+++ b/src/components/SportsLiveCardSelection/index.module.scss
@@ -143,7 +143,7 @@
       flex-direction: column;
       width: 100%;
       align-items: center;
-      justify-content: flex-start;
+      justify-content: center;
 
       &.space_between {
         justify-content: space-between;
@@ -187,6 +187,11 @@
         align-items: center;
         justify-content: space-between;
         color: $grey2;
+
+        p {
+          margin: 0;
+          padding: 0;
+        }
 
         .team_d {
           display: flex;
@@ -353,7 +358,7 @@
             flex-direction: column;
             justify-content: center;
             align-items: center;
-            min-height: 65px;
+            min-height: 80px;
 
             .container_card_body_top {
               margin: 10px 0 5px 0;
@@ -373,6 +378,10 @@
                   margin: 0 4px 2px 0;
                   padding: 0;
                 }
+              }
+
+              &.margin_bottom {
+                margin-bottom: 8px;
               }
 
               &.zero_margin {
@@ -536,7 +545,7 @@
     border: 0.4px solid $divider;
     opacity: 0.1;
     padding: 0;
-    margin: 10px auto;
+    margin: 10px 0 0px 0;
     width: 100%;
   }
 
@@ -575,7 +584,7 @@
     min-width: 25%;
     border-radius: 40px 40px 0 0;
     align-self: flex-end;
-    transform: translateX(-10px);
+    transform: translateY(10px);
     padding: 20px 0;
     box-shadow: inset 0 0px 14px 13px $lightBlack8;
 
@@ -588,6 +597,7 @@
     > div {
       display: flex;
       flex-direction: column;
+      padding: 0;
 
       p {
         font-size: 16px;
@@ -608,18 +618,37 @@
 
   .modal_header {
     display: flex;
-    justify-content: space-between;
-    margin: 25px 0 5px 0;
+    flex-direction: column;
+    justify-content: flex-end;
+    align-items: flex-end;
+    margin: 15px 0 0px 0;
+
+    .modal_header_1 {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      width: 100%;
+    }
 
     .title {
       font-size: 52px;
       font-family: Teko;
       padding: 0;
       margin: 0;
+      transform: translateY(15px);
+      font-weight: normal;
+
+      span {
+        font-size: 52px;
+        font-family: Teko;
+        text-transform: uppercase;
+        font-weight: normal;
+      }
     }
 
     svg {
       opacity: 0.8;
+      margin: 0 0 15px 0;
 
       &:hover {
         cursor: pointer;
@@ -630,13 +659,16 @@
 
   .modal_body {
     display: flex;
+    width: 1024px;
     flex-direction: column;
-    background-color: $black;
+    background-color: $black2;
     border-radius: 11px;
     justify-content: flex-start;
     align-items: center;
     overflow: hidden scroll;
     height: 542px;
+    z-index: 1;
+    padding: 0;
 
     &::-webkit-scrollbar {
       width: 0;
@@ -647,6 +679,7 @@
       width: 100%;
       padding: 25px;
       justify-content: space-between;
+      background-color: $black;
 
       .modal_header_left {
         display: flex;
