--- a/src/components/SearchInput/index.module.scss
+++ b/src/components/SearchInput/index.module.scss
@@ -1,93 +1,99 @@
 @import "../../scss/colors.scss";
 
 .search_form {
+  display: flex;
+  align-items: center;
+
+  span {
+    background-color: $lightBlack5;
+    padding: 2px 10px;
+    border-radius: 12px;
+    margin: 0 10px 0 0;
+    width: 318px;
+
+    svg {
+      transform: translate(0, 6px);
+      margin: 0 10px;
+    }
+
+    input {
+      border: none;
+      outline: none;
+      background-color: transparent;
+      height: 46px;
+      width: 84%;
+      color: $white;
+      font-size: 14px;
+    }
+  }
+
+  .search_dropdown {
+    background-color: $lightBlack5;
+    padding: 13px 20px;
+    border-radius: 12px;
+    font-size: 14px;
+    position: relative;
+    width: 150px;
     display: flex;
+    justify-content: center;
     align-items: center;
 
-    span {
-        background-color: $lightBlack5;
-        padding: 2px 10px;
-        border-radius: 12px;
-        margin: 0 10px 0 0;
-
-        svg {
-            transform: translate(0, 6px);
-            margin: 0 10px;
-        }
-
-        input {
-            border: none;
-            outline: none;
-            background-color: transparent;
-            height: 46px;
-            width: 318px;
-            color: $white;
-            font-size: 14px;
-        }
+    &:hover {
+      cursor: pointer;
     }
 
-    .search_dropdown {
-        background-color: $lightBlack5;
-        padding: 13px 20px;
-        border-radius: 12px;
-        font-size: 14px;
-        position: relative;
-        min-width: 135px;
+    .arrow {
+      position: absolute;
+      border: solid $white;
+      border-radius: 0;
+      border-width: 0 2px 2px 0;
+      padding: 3px;
+      display: inline-block;
+      width: 8px;
+      //   margin: 0 0 0 calc(150 * 0.2);
+    }
+
+    .down {
+      transform: rotate(45deg) translate(36px, -37px);
+      //   transition: transform 0.1s;
+    }
+
+    .up {
+      transform: rotate(-135deg) translate(-36px, 37px);
+      //   transition: transform 0.1s;
+    }
+
+    .search_dropdown_menu {
+      display: flex;
+      flex-direction: column;
+      position: absolute;
+      background-color: $lightBlack5;
+      width: 100%;
+      border-radius: 0 0 12px 12px;
+      transform: translate(0%, 110px);
+      font-size: 14px;
+      z-index: 5;
+
+      span {
+        width: 100%;
+        padding: 13px 30px;
+        border-radius: 0;
+
+        &:last-child {
+          border-radius: 0 0 12px 12px;
+        }
 
         &:hover {
-            cursor: pointer;
+          cursor: pointer;
+          background-color: $darkblack;
+          transition: background-color 1s;
         }
 
-        .arrow {
-            border: solid $white;
-            border-radius: 0;
-            border-width: 0 3px 3px 0;
-            padding: 3px;
-            display: inline-block;
-            margin: 0 0 0 calc(135px * 0.2);
+        &.active {
+          cursor: default;
+          background-color: $darkblack;
         }
-
-        .down {
-            transform: rotate(45deg) translate(-5px, 3px);
-            transition: transform 0.1s;
-        }
-
-        .up {
-            transform: rotate(-135deg) translate(2px, -6px);
-            transition: transform 0.1s;
-        }
-
-        .search_dropdown_menu {
-            display: flex;
-            flex-direction: column;
-            position: absolute;
-            background-color: $lightBlack5;
-            width: 100%;
-            border-radius: 0 0 12px 12px;
-            transform: translate(-14%, 5px);
-            font-size: 14px;
-            z-index: 5;
-
-            span {
-                width: 100%;
-                padding: 13px 30px;
-                border-radius: 0;
-
-                &:last-child {
-                    border-radius: 0 0 12px 12px;
-                }
-
-                &:hover {
-                    cursor: pointer;
-                    background-color: $darkblack;
-                    transition: background-color 1s;
-                }
-
-                &.active {
-                    cursor: default;
-                    background-color: $darkblack;
-                }
-            }
-        }
+      }
     }
+  }
 }
