--- a/src/scss/colors.scss
+++ b/src/scss/colors.scss
@@ -23,6 +23,7 @@ $lightBlack9: #00000057;
 $lightBlack10: #6363633d;
 $lightBlack11: #292a2e;
 $lightBlack12: #00000024;
+$lightBlack13: #00000014;
 $lightGrey: #303133;
 $lightGrey1: #d8d8d8;
 $lightGrey2: #c7cad1;
@@ -33,6 +34,7 @@ $black2: #17181a;
 $black3: #111111cc;
 $black4: #11111199;
 $black5: #00000080;
+$black6: #17181a80;
 $white: #fff;
 $white1: #ffffff99;
 $grey: #979797;
