--- a/src/components/SportsSelectionCard3/index.module.scss
+++ b/src/components/SportsSelectionCard3/index.module.scss
@@ -312,11 +312,10 @@
       padding: 0;
     }
 
-    img {
-      width: 15px;
-      height: 15px;
+    svg {
+      padding: 0;
       margin: 0;
-      margin-right: 5px;
+      margin-right: 2px;
     }
   }
 }
